name:           typo
version:        0.1.0
license:        BSD3
license-file:   LICENSE
category:       Language
copyright:      (c) 2013-2014 Spiros Eliopoulos
author:         Spiros Eliopoulos <seliopou@gmail.com>
stability:      experimental
cabal-version:  >= 1.8
build-type:     Simple


library
  exposed-modules:
    Language.Typo
    Language.Typo.ASTs
    Language.Typo.Config
    Language.Typo.Compiler
    Language.Typo.Compiler.Expression
    Language.Typo.Compiler.Definition
    Language.Typo.Parser
    Language.Typo.Prelude
    Language.Typo.PrettyPrint
    Language.Typo.Token

  build-depends:
    base        >= 4.4   && < 5,
    containers  >= 0.3   && < 0.6,
    mtl         >= 2.0.1 && < 2.2,
    parsec      >= 3.1   && < 4,
    pretty      >= 1.1.0,
    template-haskell

executable typoc
  main-is:  Main.hs
  build-depends:
    base        >= 4.4   && < 5,
    containers  >= 0.3   && < 0.6,
    mtl         >= 2.0.1 && < 2.2,
    parsec      >= 3.1   && < 4,
    pretty      >= 1.1.0,
    template-haskell,
    typo
